--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdl/core": "^6.0.1",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
@@ -20,9 +21,12 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular2-mdl": "^2.13.2",
     "angularfire2": "^5.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "ngx-pagination": "^3.2.1",
     "rm": "^0.1.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
