--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
     "angular2-mdl": "^2.13.2",
     "angularfire2": "^5.1.0",
     "bootstrap": "^4.1.3",
@@ -28,7 +31,8 @@
     "firebase": "^5.5.8",
     "ngx-pagination": "^3.2.1",
     "rm": "^0.1.8",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
