--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "webpack-dev-server": ">=3.1.11"
   }
 }
