--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1",
-    "webpack-dev-server": ">=3.1.11"
+    "typescript": "~3.1.1"
   }
 }
